--- a/TrabalhoP2/TrabalhoP2.html
+++ b/TrabalhoP2/TrabalhoP2.html
@@ -11,26 +11,26 @@
       <legend>Dados Pessoais</legend>
       <p>
         Nome:
-        <input type="text" name="" value="">
+        <input id="nome" type="text" name="" value="">
         Sobrenome:
-        <input type="text" name="" value="">
+        <input id="sobreNome" type="text" name="" value="">
       </p>
       <p>
         Sexo:
-        <input type="radio" name="sexo" value=""> Masculino
-        <input type="radio" name="sexo" value=""> Feminino
+        <input id="masc" type="radio" name="sexo" value=""> Masculino
+        <input id="fem" type="radio" name="sexo" value=""> Feminino
       </p>
       <p>
         Nascimento:
-        <input type="text" name="" value="">
+        <input id="nascimento" type="text" name="" value="">
       </p>
       <p>
         RG:
-        <input type="text" name="" value="">
+        <input id="rg" type="text" name="" value="">
       </p>
       <p>
         CPF:
-        <input type="text" name="" value=""> - <input type="text" name="" value="">
+        <input id="cpf" type="text" name="" value=""> - <input type="text" name="" value="">
       </p>
     </fieldset>
 
@@ -38,14 +38,14 @@
       <legend>Dados de Endereço</legend>
       <p>
         Rua:
-        <input type="text" name="" value="">
+        <input id="rua" type="text" name="" value="">
         Número:
-        <input type="text" name="" value="">
+        <input id="numero" type="text" name="" value="">
       </p>
 
       <p>
         Bairro:
-        <input type="text" name="" value="">
+        <input id="bairro" type="text" name="" value="">
       </p>
 
       <p>
@@ -59,7 +59,7 @@
         </datalist>-->
 
 
-        <select name="estado">
+        <select id="estado" name="estado">
           <option value="1">Acre</option>
           <option value="2">Rio De Janeiro</option>
           <option value="3">São Paulo</option>
@@ -70,12 +70,12 @@
 
       <p>
         Cidade:
-        <input type="text" name="" value="">
+        <input id="cidade" type="text" name="" value="">
       </p>
 
       <p>
         CEP:
-          <input type="text" name="" value=""> - <input type="text" name="" value="">
+          <input id="cep1" type="text" name="" value=""> - <input id="cep2" type="text" name="" value="">
       </p>
     </fieldset>
 
@@ -83,32 +83,32 @@
       <legend>Dados de Login</legend>
       <p>
         E-Mail:
-        <input type="text" name="" value="">
+        <input id="email" type="text" name="" value="">
       </p>
       <p>
         Confirmar E-Mail:
-        <input type="text" name="" value="">
+        <input id="cEmail" type="text" name="" value="">
       </p>
       <p>
         Login de usuário:
-        <input type="text" name="" value="">
+        <input id="loginUser" type="text" name="" value="">
       </p>
       <p>
         Senha:
-        <input type="text" name="" value="">
+        <input id="senha" type="text" name="" value="">
       </p>
       <p>
         Confirmar a senha:
-        <input type="text" name="" value="">
+        <input id="cSenha" type="text" name="" value="">
     </fieldset>
 
     <fieldset>
       <legend>Pesquisa</legend>
       <p>
         Você deseja trabalhar como Webmaster?
-        <input type="radio" name="webMaster" value=""> sim
-        <input type="radio" name="webMaster" value=""> não
-        <input type="radio" name="webMaster" value=""> talvez
+        <input id="webSim" type="radio" name="webMaster" value=""> sim
+        <input id="webNao" type="radio" name="webMaster" value=""> não
+        <input id="web" type="radio" name="webMaster" value=""> talvez
         <input type="radio" name="webMaster" value=""> quem sabe
       </p>
       <p>
@@ -125,7 +125,13 @@
 
     </fieldset>
 
+	<p>
+		<button type="submit" name="button">Enviar</button>
+		<button id="limpar" type="reset" name="button">Limpar</button>
+	</p>
 
+	<script type="text/javascript" src="TrabalhoP2.js">
+   	</script>
 
   </body>
 </html>
