--- a/TrabalhoP2/TrabalhoP2.html
+++ b/TrabalhoP2/TrabalhoP2.html
@@ -17,8 +17,8 @@
       </p>
       <p>
         Sexo:
-        <input id="masc" type="radio" name="sexo" value=""> Masculino
-        <input id="fem" type="radio" name="sexo" value=""> Feminino
+        <input id="masculino" type="radio" name="sexo" value=""> Masculino
+        <input id="Feminino" type="radio" name="sexo" value=""> Feminino
       </p>
       <p>
         Nascimento:
